--- a/css/style-formatted.css
+++ b/css/style-formatted.css
@@ -2712,7 +2712,7 @@ body {
         padding-top: 28px;
         margin-left: 0;
         margin-right: 500px;
-        background-image: url("../img/feedback-phone.jpg");
+        background-image: url("../img/placeholder.jpg");
     }
 
     .feedback__item-container {
